--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <input type="text" id="description" placeholder="filter by title, benifits, companies" />
         <input type="text" id="location" placeholder="location,pincode,cityname" />
         <select id="description" defaultValue="python">
-            <option value="forks"> all</option>
-            <option value="stars">full TIme</option>
+            <option value="all"> all</option>
+            <option value="fulltime">full TIme</option>
         </select>
         <button id="getinfo">Search</button>
     </div>
