--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indian railway</title>
+    <title>Rail Seva</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -20,20 +20,20 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                    <a style="font-size: 40px; color: yellow;" class="navbar-brand" href="index.html">RailSewa</a>
+                    <a style="font-size: 40px; color: yellow;" class="navbar-brand" href="index.html">Rail-Seva</a>
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item ml-5">
-                            <a class="nav-link ml-5" href="stationlive.html">Live station <span
+                        <li class="nav-item ml-4">
+                            <a class="nav-link ml-4" href="stationlive.html">Live station <span
                                     class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item ml-5">
-                            <a class="nav-link ml-5" href="pnr.html">Pnr status</a>
+                        <li class="nav-item ml-4">
+                            <a class="nav-link ml-4" href="pnr.html">Pnr status</a>
                         </li>
-                        <li class="nav-item ml-5">
-                            <a class="nav-link ml-5" href="pnr.html">Running live status</a>
+                        <li class="nav-item ml-4">
+                            <a class="nav-link ml-4" href="pnr.html">Running live status</a>
                         </li>
-                        <li class="nav-item ml-5">
-                            <a class="nav-link ml-5" href="pnr.html">train beetween station</a>
+                        <li class="nav-item ml-4">
+                            <a class="nav-link ml-4" href="pnr.html">train beetween station</a>
                         </li>
                     </ul>
                     <form class="form-inline my-2 my-lg-0">
@@ -43,6 +43,24 @@
                 </div>
             </nav>
         </div>
+
+        <div class="text-center">
+            <img alt="rail-seva" class="ing-fluid"
+                src="https://images.railyatri.in/ry_images_prod/Homepage-BannerNew-1592207921.jpg" />
+        </div>
+
+        <div class="container d-flex flex-column text-center border mt-5 border-primary">
+            <a class="h1 text-success" href="stationlive.html"> <i class="fa fa-hand-o-right"
+                    aria-hidden="true"></i>Search Live Station Train</a>
+            <a class="h1 text-danger" href="pnr.html"> <i class="fa fa-hand-o-right" aria-hidden="true"></i> search for
+                Pnr status</a>
+            <a class="h1 text-danger" href="pnr.html"> <i class="fa fa-hand-o-right" aria-hidden="true"></i> Running
+                live status</a>
+            <a class="h1 text-danger" href="pnr.html"> <i class="fa fa-hand-o-right" aria-hidden="true"></i> train
+                beetween station</a>
+        </div>
+
+
     </div>
 </body>
 
