--- a/pnr.html
+++ b/pnr.html
@@ -20,7 +20,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-                <a style="font-size: 40px; color: yellow;" class="navbar-brand" href="index.html">RailSewa</a>
+                <a style="font-size: 40px; color: yellow;" class="navbar-brand" href="index.html">Rail-Seva</a>
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item ml-5">
                         <a class="nav-link ml-5" href="stationlive.html">Live station <span
